Update print statement from 'Hello' to 'Goodbye'

--- a/codigo/eventos.html
+++ b/codigo/eventos.html
@@ -382,6 +382,28 @@ input:checked + .slider .emoji {
 }
 
 
+/* MODAL (modo escuro) */
+body.dark-mode .modal-meses {
+  background-color: #1c1c1c; /* fundo escuro */
+  box-shadow: 0 12px 32px rgba(0,0,0,0.6); /* sombra mais intensa */
+}
+
+body.dark-mode .modal-meses h3 {
+  color: #e2e2e2; /* texto claro */
+}
+
+body.dark-mode .meses-grid button {
+  background-color: #2a2a2a; /* botão escuro neutro */
+  color: #f0f0f0; /* texto claro */
+  border: 1px solid #444; /* borda discreta */
+}
+
+body.dark-mode .meses-grid button:hover {
+  background-color: #3a3a3a; /* hover suave */
+  box-shadow: 0 6px 16px rgba(0,0,0,0.35);
+}
+
+
 /* RODAPÉ */
 .rodape {
   text-align: center;
