Refactor index.html with updated structure and styles

--- a/codigo/index.html
+++ b/codigo/index.html
@@ -368,27 +368,22 @@ input:checked + .slider .emoji {
 <!-- ACESSO RÁPIDO -->
 <h1 class="tit">Acesso rápido</h1>
 <div class="acesso-rapido">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
-  <div class="card">
+  <div class="card" onclick="window.location.href='areas.html'" style="cursor:pointer;">
     <h2>Área para o aluno</h2>
-    <p><i class="fa-solid fa-wrench"></i> em obras</p>
-
+    <p>Acesso rápido para atividades e informações do estudante.</p>
   </div>
 
-  <div class="card">
+  <div class="card" onclick="window.location.href='areas.html'" style="cursor:pointer;">
     <h2>Área para os pais</h2>
-    <p><i class="fa-solid fa-wrench"></i> em obras</p>
-
+    <p> Espaço com avisos e acompanhamento escolar dos filhos.</p>
   </div>
 
-  <div class="card">
+  <div class="card" onclick="window.location.href='areas.html'" style="cursor:pointer;">
     <h2>Área para os professores</h2>
-    <p><i class="fa-solid fa-wrench"></i> em obras</p>
-
+    <p> Materiais, comunicados e suporte para docentes.</p>
   </div>
-
 </div>
+
 
 <!-- FOOTER -->
 <footer class="footer">
